--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/logo.svg" />
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo512.png" />
+    <link rel="icon" type="image/svg+xml" href="logo.svg" />
+    <link rel="icon" type="image/png" href="logo512.png" />
     <title>Ferbend - Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,14 +15,14 @@
 <body>
     <main class="container">
         <div>
-            <img class="logo" src="./ferbend-logo-white.svg">
+            <img class="logo" src="ferbend-logo-white.svg">
             <h3>Web Application Under Construction</h3>
             <h3>Aplicación web en construcción</h3>
             <h3>Aplicació web en construcció</h3>
         </div>
         <div class="background">
             <video autoplay muted loop>
-                <source src="./background.mp4" type="video/mp4">
+                <source src="background.mp4" type="video/mp4">
   Your browser does not support the video tag.
             </video>
         </div>
